[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/PixilArt/sprites.png" type="Texture" id=1]
[ext_resource path="res://UI/DiceButton.gd" type="Script" id=2]
[ext_resource path="res://Assets/PixilArt/white-dice.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
resource_local_to_scene = true
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=2]
resource_local_to_scene = true
atlas = ExtResource( 3 )
region = Rect2( 14, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=3]
resource_local_to_scene = true
atlas = ExtResource( 3 )
region = Rect2( 28, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=4]
resource_local_to_scene = true
atlas = ExtResource( 3 )
region = Rect2( 42, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=5]
resource_local_to_scene = true
atlas = ExtResource( 3 )
region = Rect2( 56, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=6]
resource_local_to_scene = true
atlas = ExtResource( 3 )
region = Rect2( 70, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=13]
resource_local_to_scene = true
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=7]
resource_local_to_scene = true
atlas = ExtResource( 1 )
region = Rect2( 0, 14, 12, 12 )

[sub_resource type="AtlasTexture" id=8]
resource_local_to_scene = true
atlas = ExtResource( 1 )
region = Rect2( 14, 14, 12, 12 )

[sub_resource type="AtlasTexture" id=9]
resource_local_to_scene = true
atlas = ExtResource( 1 )
region = Rect2( 28, 14, 12, 12 )

[sub_resource type="AtlasTexture" id=10]
resource_local_to_scene = true
atlas = ExtResource( 1 )
region = Rect2( 42, 14, 12, 12 )

[sub_resource type="AtlasTexture" id=11]
resource_local_to_scene = true
atlas = ExtResource( 1 )
region = Rect2( 56, 14, 12, 12 )

[sub_resource type="AtlasTexture" id=12]
resource_local_to_scene = true
atlas = ExtResource( 1 )
region = Rect2( 70, 14, 12, 12 )

[node name="DiceButton" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1552.0
margin_bottom = -1152.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Red" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="TextureButton" parent="Red"]
visible = false
margin_right = 48.0
margin_bottom = 48.0
texture_normal = SubResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="TextureButton" parent="Red"]
visible = false
margin_right = 48.0
margin_bottom = 48.0
texture_normal = SubResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3" type="TextureButton" parent="Red"]
visible = false
margin_right = 48.0
margin_bottom = 48.0
texture_normal = SubResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="4" type="TextureButton" parent="Red"]
visible = false
margin_right = 48.0
margin_bottom = 48.0
texture_normal = SubResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="5" type="TextureButton" parent="Red"]
visible = false
margin_right = 48.0
margin_bottom = 48.0
texture_normal = SubResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="6" type="TextureButton" parent="Red"]
visible = false
margin_right = 48.0
margin_bottom = 48.0
texture_normal = SubResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="White" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="TextureButton" parent="White"]
visible = false
margin_right = 48.0
margin_bottom = 48.0
texture_normal = SubResource( 13 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="TextureButton" parent="White"]
visible = false
margin_right = 48.0
margin_bottom = 48.0
texture_normal = SubResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3" type="TextureButton" parent="White"]
margin_right = 48.0
margin_bottom = 48.0
texture_normal = SubResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="4" type="TextureButton" parent="White"]
visible = false
margin_right = 48.0
margin_bottom = 48.0
texture_normal = SubResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="5" type="TextureButton" parent="White"]
visible = false
margin_right = 48.0
margin_bottom = 48.0
texture_normal = SubResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="6" type="TextureButton" parent="White"]
visible = false
margin_right = 48.0
margin_bottom = 48.0
texture_normal = SubResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Yellow" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="TextureButton" parent="Yellow"]
visible = false
margin_right = 48.0
margin_bottom = 48.0
texture_normal = SubResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="TextureButton" parent="Yellow"]
margin_right = 48.0
margin_bottom = 48.0
texture_normal = SubResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3" type="TextureButton" parent="Yellow"]
visible = false
margin_right = 48.0
margin_bottom = 48.0
texture_normal = SubResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="4" type="TextureButton" parent="Yellow"]
visible = false
margin_right = 48.0
margin_bottom = 48.0
texture_normal = SubResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="5" type="TextureButton" parent="Yellow"]
visible = false
margin_right = 48.0
margin_bottom = 48.0
texture_normal = SubResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="6" type="TextureButton" parent="Yellow"]
visible = false
margin_right = 48.0
margin_bottom = 48.0
texture_normal = SubResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Red/1" to="." method="_on_1_pressed"]
[connection signal="pressed" from="Red/2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="Red/3" to="." method="_on_3_pressed"]
[connection signal="pressed" from="Red/4" to="." method="_on_4_pressed"]
[connection signal="pressed" from="Red/5" to="." method="_on_5_pressed"]
[connection signal="pressed" from="Red/6" to="." method="_on_6_pressed"]
[connection signal="pressed" from="White/1" to="." method="_on_1_pressed"]
[connection signal="pressed" from="White/2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="White/3" to="." method="_on_3_pressed"]
[connection signal="pressed" from="White/4" to="." method="_on_4_pressed"]
[connection signal="pressed" from="White/5" to="." method="_on_5_pressed"]
[connection signal="pressed" from="White/6" to="." method="_on_6_pressed"]
[connection signal="pressed" from="Yellow/1" to="." method="_on_1_pressed"]
[connection signal="pressed" from="Yellow/2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="Yellow/3" to="." method="_on_3_pressed"]
[connection signal="pressed" from="Yellow/4" to="." method="_on_4_pressed"]
[connection signal="pressed" from="Yellow/5" to="." method="_on_5_pressed"]
[connection signal="pressed" from="Yellow/6" to="." method="_on_6_pressed"]
